--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -96,5 +96,9 @@
             width: 82px
             height: 96px
             margin-left: 25px
+            +sm-block()
+                width: 42px
+                height: 48px
+                margin-left: 20px
 
 
