--- a/dev/static/styles/modules/contacts-page.sass
+++ b/dev/static/styles/modules/contacts-page.sass
@@ -5,6 +5,8 @@
     display: flex
     justify-content: flex-start
     margin-bottom: 60px
+    +xs-block()
+        margin-bottom: 30px
 
 .contacts-page__city-tab
     padding-bottom: 21px
@@ -82,6 +84,7 @@
     flex-direction: column
     padding: 21px 30px
     background-color: $grey
+    position: relative
 
 .contacts-page__right
     flex: 1
@@ -89,6 +92,10 @@
     justify-content: stretch
     align-items: stretch
 
+.contacts-page__subtitle
+    +xs-block()
+        font-size: 20px
+        line-height: 24px
 
 .contacts-page__map-wrap
     width: 100%
@@ -98,3 +105,8 @@
 
 .contacts-page__map-wrap--active
     display: flex
+
+.contacts-page__mob-map
+    margin-bottom: 30px
+    margin-left: -30px
+    margin-right: -30px
