--- a/dev/static/styles/styles.sass
+++ b/dev/static/styles/styles.sass
@@ -7,7 +7,8 @@
 html
     font-size: $base-font-size
     height: 100%
-
+    +xs-block()
+        font-size: 16px
 body
     min-height: 100vh
     scroll-behavior: smooth
@@ -167,12 +168,27 @@ button
     &__input
         padding-right: 30px
         padding-left: 30px
+        min-height: 50px
+        +md-block()
+            width: 50%
+        +sm-block()
+            width: 100%
     &__line
         display: flex
         & > *
             flex: 1
             &:not(:last-child)
                 margin-right: 50px
+            +md-block()
+                &:not(:last-child)
+                    margin-right: 0
+        +md-block()
+            flex-direction: column
+            align-items: flex-start
+            & > *
+                &:not(:last-child)
+                    margin-bottom: 30px
+
     &__col-wrap
         display: flex
         justify-content: center
