--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -6,6 +6,11 @@
             icon: 'agima',
         },
         {
+            name: 'РАЕК',
+            link: '#',
+            icon: 'raek',
+        },
+        {
             name: 'FaceBook',
             link: '#',
             icon: 'fb',
