--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -69,7 +69,7 @@
         },
         {
             name: 'Разработка и развитие сайтов',
-            link: '#'
+            link: 'site-develop.html'
         },
     ]
 -
@@ -184,6 +184,7 @@
                       </ul>`,
         },
     ]
+
 -
     var tabsStrategy = [
         {
@@ -213,6 +214,130 @@
         {
             title: 'Отчетность',
             text: `<p>Передача сайта заказчику (перенос на отдельный хостинг), обучение работе с системой управления сайта (CMS) и дальнейшая техническая поддержка.</p>`,
+        },
+    ]
+
+-
+    var tabsDevelop = [
+        {
+            title: 'Landing Page',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolore doloremque itaque magni placeat, possimus ratione repudiandae sequi!</p>`,
+        },
+        {
+            title: 'Корпоративный сайт',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Интернет-магазин',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Поддержка сайтов',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit perferendis repudiandae saepe.</p>`,
+        },
+    ]
+
+-
+    var tabsSupport = [
+        {
+            title: 'Программирование',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolore doloremque itaque magni placeat, possimus ratione repudiandae sequi!</p>`,
+        },
+        {
+            title: 'Проектирование и дизайн',
+            text: `<p>Устраняем технические проблемы. Анализируем работоспособность и скорость, устраняем ошибки, предупреждаем угрозы безопасности. Недоступность ресурса и потери данных не украдут прибыль компании.</p>`,
+        },
+        {
+            title: 'Актуализация данных',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Администрирование',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit perferendis repudiandae saepe.</p>`,
+        },
+    ]
+
+-
+    var tabsAnalitics = [
+        {
+            title: 'Анализ спроса',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolore doloremque itaque magni placeat, possimus ratione repudiandae sequi!</p>`,
+        },
+        {
+            title: 'Структура сайта',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Сравнительный анализ конкурентов',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Анализ ЦА',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Анализ продукта',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Конверсионные сценарии',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit perferendis repudiandae saepe.</p>`,
+        },
+    ]
+
+-
+    var tabsStepsDev = [
+        {
+            title: 'Агрегация требований',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolore doloremque itaque magni placeat, possimus ratione repudiandae sequi!</p>`,
+        },
+        {
+            title: 'Проектирование и ТЗ',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Дизайн',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Верстка',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Программирование',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Тестирование',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit perferendis repudiandae saepe.</p>`,
+        },
+        {
+            title: 'Запуск и поддержка',
+            text: `<p>Передача сайта заказчику (перенос на отдельный хостинг), обучение работе с системой управления сайта (CMS) и дальнейшая техническая поддержка.</p>`,
+        },
+    ]
+
+-
+    var tabsStandarts = [
+        {
+            title: 'Персональный менеджер',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolore doloremque itaque magni placeat, possimus ratione repudiandae sequi!</p>`,
+        },
+        {
+            title: 'Прозрачность работ',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Тестовые сервера и система контроля версий',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Индивидуальные условия обслуживания (SLA)',
+            text: `<p>Технические новинки, предложения по улучшению юзабилити сайта, варианты решения бизнес-задач — это и многое другое наш подход к работе. Регулярные отчеты включают в себя понятные детальные описания о состоянии Вашего сервера и сайта</p>`,
+        },
+        {
+            title: 'Персональные рекомендации по развитию',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
         },
     ]
 
@@ -340,7 +465,6 @@
         },
     ]
 
-
 -
     var ourRules = [
         {
@@ -364,3 +488,129 @@
             text: 'Руководство и коллектив ООО «Клиника «Прайм Медикал» благодарит компанию ITC Media за плодотворное сотрудничество в сфере продвижения и оптимизации сайта нашей компании.',
         },
     ]
+
+-
+    var ourRulesDev = [
+        {
+            name: 'Маркетинг в основе',
+            text: 'АО "ЭР-Телеком Холдинг" благодарит компанию ITC MEDIA за плодотворное сотрудничество по поисковому продвижению и технической поддержке сайтов bks.tv и bstk.bks.tv. Сотрудники ITC MEDIA проявляют себя как профессиональная команда.',
+        },
+        {
+            name: 'Взаимодействие с пользователем',
+            text: 'Контент — король. Визуальный слой — декорация сильного смысла, который продуман и выявлен с помощью маркетинговой аналитики.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 3',
+            text: 'Искренне признательны за добросовестное отношение, подбор и внедрение оптимальных решений по визуализации составляющей и процессу поискового продвижения сайта.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 4',
+            text: 'ООО Дятьковская Стекольная Артель (изготовление и продажа изделий из хрусталя и стекла) выражает свою благодарность ООО «ITC-MEDIA» Которая показала высокий уровень мастерства в разработке, создании и продвижении сайта.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 5',
+            text: 'Руководство и коллектив ООО «Клиника «Прайм Медикал» благодарит компанию ITC Media за плодотворное сотрудничество в сфере продвижения и оптимизации сайта нашей компании.',
+        },
+    ]
+
+-
+    var promBadges = {
+        text: 'Как показывает практика, разработка сайта без участия интернет-маркетолога, приводит к плачевным результатам: сайты остаются незаметными для пользователей. Привлечь так необходимый трафик может лишь основательная маркетинговая подготовка.',
+        badges: [
+            {
+                icon: 'bitrix-small',
+                desc: 'Участник программы мониторинга качества внедрений',
+            },
+            {
+                icon: 'bitrix-small',
+                desc: 'Золотой партнер 1С-Битрикс',
+            },
+            {
+                icon: 'garant',
+                desc: 'Гарантия 6 мес',
+            },
+        ]
+
+    }
+
+-
+    var developBadges = {
+        text: 'Как показывает практика, разработка сайта без участия интернет-маркетолога, приводит к плачевным результатам: сайты остаются незаметными для пользователей. Привлечь так необходимый трафик может лишь основательная маркетинговая подготовка.',
+        badges: [
+            {
+                icon: 'bitrix-small',
+                desc: 'Участник программы мониторинга качества внедрений',
+            },
+            {
+                icon: 'bitrix-small',
+                desc: 'Золотой партнер 1С-Битрикс',
+            },
+            {
+                icon: 'garant',
+                desc: 'Создаём сайты с учётом требований поисковиков',
+            },
+        ]
+
+    }
+
+-
+    var supportBadges = {
+        text: 'Современные сайты являются результатом непрерывной модернизации в соответствии с постоянно растущими требованиями развивающегося бизнеса. Отдел поддержки в составе нашей компании, располагает всеми возможностями для оказания полного комплекса услуг по обслуживанию сайтов и их доработке.',
+        badges: [
+            {
+                icon: 'bitrix-small',
+                desc: 'Мониторинг сайтов и серверов 24/7',
+            },
+            {
+                icon: 'bitrix-small',
+                desc: 'Поддержка в формате выделенной команды',
+            },
+            {
+                icon: 'garant',
+                desc: 'Индивидуальне условия обслуживания',
+            },
+        ]
+
+    }
+
+-
+    var promAvideo = {
+        title: 'Авторская методика продвижения',
+        bg: 'showreel_bg.jpg',
+        subtitle: 'Вы уверены что Ваше SEO работает на 100%?',
+        link: 'https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0',
+        steps: [
+            'Собираем "длинный хвост"',
+            'Изучаем потенциал ключевых слов',
+            'Используем карту релевантости',
+            'Увеличиваем охват',
+        ]
+    }
+
+-
+    var devAvideo = {
+        title: 'Рассказываем о процессе создания сайта',
+        bg: 'showreel_bg.jpg',
+        subtitle: 'Крутая аналитика в основе наших проектов!',
+        link: 'https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0',
+        steps: [
+            'Анализируем целевую аудиторию',
+            'Прорабатываем сценарии поведения ',
+            'Подключаем SEO на этапе проектирования',
+            'Проводим сложные интеграции',
+        ]
+    }
+
+-
+    var supportAvideo = {
+        title: 'Рассказываем о процессе поддержки сайтов',
+        bg: 'showreel_bg.jpg',
+        subtitle: 'Помогаем вашему сайту идти в ногу со временем!',
+        link: 'https://youtu.be/I_l8eApu9G4&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0',
+        steps: [
+            'Мониторинг сайтов и серверов 24/7',
+            'Сертифичированные Битрикс разработчики',
+            'Система постановки и контроля выполнения задач',
+            'Участвуем в программе мониторинга качества внедрений',
+        ]
+    }
