--- a/dev/pug/utils/mixins.pug
+++ b/dev/pug/utils/mixins.pug
@@ -21,7 +21,7 @@ mixin taber(tabs, title, light)
     section.section
         if (title)
             h2.h2.taber__title-h2= title
-        .b-taber(class= light ? 'taber--light' : '')
+        .b-taber(class= light ? `taber--${light}` : '')
             ._left
                 ul._title-items
                     each item, index in tabs
@@ -34,33 +34,6 @@ mixin taber(tabs, title, light)
                         div(id="tab-num-" + (index + 1), class= index === 0 ? 'active' : '')._card
                             | !{text}
 
-mixin feedbackSlider (title, feedbacks, mod)
-    // todo доделать
-    // Feedback section
-    section.section
-        .b-feedback
-            h2.h2._title title
-            ._wrap
-                ._desc
-                    .feedback-carousel.owl-carousel
-                        each item in feedbacks
-                            ._item
-                                ._item-left
-                                    ._name= item.name
-                                    +icon('quotes', 'feedback__icon-quotes')
-                                ._item-right
-                                    ._text= item.text
-                                    if item.original
-                                        a(href= item.original, title="Оригинал отзыва " + item.name)._original Смотреть оригинал
-                ._controls
-                    ._counter
-                    ._navigation
-                        ._prev
-                            button.b-btn.-round._btn
-                                +icon('arrow-left', 'btn__icon-arrow btn__icon-arrow-left')
-                        ._next
-                            button.b-btn.-round._btn
-                                +icon('arrow', 'btn__icon-arrow')
 
 mixin feedbackSlider(arr, title, mod)
     section.section
@@ -88,3 +61,26 @@ mixin feedbackSlider(arr, title, mod)
                         ._next
                             button.b-btn.-round._btn
                                 +icon('arrow', 'btn__icon-arrow')
+
+mixin badges(arr)
+    section.section
+        .b-badges
+            ._desc= arr.text
+            each badge in arr.badges
+                ._badge
+                    +icon(badge.icon, 'badges__icon')
+                    ._badge-text= badge.desc
+
+mixin avideo(arr)
+    section.section
+        .b-avideo
+            h2.h2._title= arr.title
+            ._wrap(style=`background-image: url(images/general/${arr.bg})`)
+                ._text
+                    ._subtitle= arr.subtitle
+                    ul._steps
+                        each step in arr.steps
+                            li._step= step
+                ._btn-wrap
+                    a(data-fancybox, href= arr.link).b-btn.-big.-full.-blue.-round._btn
+                        +icon('empty_triangle', 'btn__icon-empty-triangle')
