Add context pages

--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -57,7 +57,7 @@
         },
         {
             name: 'Контекстная реклама',
-            link: '#'
+            link: 'context.html'
         },
         {
             name: 'Таргетированная реклама',
@@ -342,6 +342,62 @@
     ]
 
 -
+    var tabsContext = [
+        {
+            title: 'Реклама в Яндекс Директ',
+            text: `<p>Мы знаем, как настроить и разместить рекламу в «Яндекс.Директ», чтобы она стала эффективным источником конверсионного трафика для вашего бизнеса. Эта услуга предоставляется в рамках комплекса платных каналов, реализованных на базе платформы Digital Marketing Integrator. Если вы уже используете контекстную рекламу в «Яндекс.Директ», то наш аудит кампаний поможет улучшить их эффективность и снизить стоимость одного перехода.</p>`,
+        },
+        {
+            title: 'Продвижение в Яндекс Маркет',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Реклама в Google Ads',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Эффективный ремаркетинг',
+            text: `<p>Технические новинки, предложения по улучшению юзабилити сайта, варианты решения бизнес-задач — это и многое другое наш подход к работе. Регулярные отчеты включают в себя понятные детальные описания о состоянии Вашего сервера и сайта</p>`,
+        },
+        {
+            title: 'RTB-реклама в Яндексе',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+    ]
+
+-
+    var tabsAdStep = [
+        {
+            title: 'Погружение в нишу',
+            text: `<p>Мы знаем, как настроить и разместить рекламу в «Яндекс.Директ», чтобы она стала эффективным источником конверсионного трафика для вашего бизнеса. Эта услуга предоставляется в рамках комплекса платных каналов, реализованных на базе платформы Digital Marketing Integrator. Если вы уже используете контекстную рекламу в «Яндекс.Директ», то наш аудит кампаний поможет улучшить их эффективность и снизить стоимость одного перехода.</p>`,
+        },
+        {
+            title: 'Анализ конкурентов',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Подбор ключевых фраз',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Написание объявлений',
+            text: `<p>Технические новинки, предложения по улучшению юзабилити сайта, варианты решения бизнес-задач — это и многое другое наш подход к работе. Регулярные отчеты включают в себя понятные детальные описания о состоянии Вашего сервера и сайта</p>`,
+        },
+        {
+            title: 'Сегментация кампании',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Аналитика и оптимизация',
+            text: `<p>Технические новинки, предложения по улучшению юзабилити сайта, варианты решения бизнес-задач — это и многое другое наш подход к работе. Регулярные отчеты включают в себя понятные детальные описания о состоянии Вашего сервера и сайта</p>`,
+        },
+        {
+            title: 'Ведение кампании',
+            text: `<p>Вникаем в Ваш маркетинг продаж, а именно выясняем, как Вы продаёте, есть ли у Вас акции, спецпредложения и т.д. Выявляем сильные и слабые стороны Вашего сайта. Анализируем сайт на предмет наличия и качества рекламного предложения. Это придаст индивидуальности и конкурентной устойчивости вашему продукту.</p>`,
+        },
+    ]
+
+-
     var topCases = [
         {
             name: 'МСК Групп',
@@ -514,6 +570,30 @@
     ]
 
 -
+    var metrix = [
+        {
+            name: 'Показатель отказов',
+            text: 'Получите очищенные ключевые слова от мусорных добавок, таких как: «бесплатно», «скачать», «торрент» и т.д. (в зависимости от ниши) и приведем клиента на нужную для него страницу Вашего сайта, в свою очередь, и сайт должен быть нормальным (продающим). После выполнения этих действий показатель отказов станет минимальным.',
+        },
+        {
+            name: 'Взаимодействие с пользователем',
+            text: 'Контент — король. Визуальный слой — декорация сильного смысла, который продуман и выявлен с помощью маркетинговой аналитики.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 3',
+            text: 'Искренне признательны за добросовестное отношение, подбор и внедрение оптимальных решений по визуализации составляющей и процессу поискового продвижения сайта.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 4',
+            text: 'ООО Дятьковская Стекольная Артель (изготовление и продажа изделий из хрусталя и стекла) выражает свою благодарность ООО «ITC-MEDIA» Которая показала высокий уровень мастерства в разработке, создании и продвижении сайта.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 5',
+            text: 'Руководство и коллектив ООО «Клиника «Прайм Медикал» благодарит компанию ITC Media за плодотворное сотрудничество в сфере продвижения и оптимизации сайта нашей компании.',
+        },
+    ]
+
+-
     var promBadges = {
         text: 'Как показывает практика, разработка сайта без участия интернет-маркетолога, приводит к плачевным результатам: сайты остаются незаметными для пользователей. Привлечь так необходимый трафик может лишь основательная маркетинговая подготовка.',
         badges: [
@@ -568,6 +648,26 @@
             {
                 icon: 'garant',
                 desc: 'Индивидуальне условия обслуживания',
+            },
+        ]
+
+    }
+
+-
+    var contextBadges = {
+        text: 'Настройка и ведение контекстной рекламы в Яндекс.Директ и Google Adwords — это не только грамотный подбор ключевых запросов с периодическим расширением их перечня, написание продающих текстов объявлений, выбор оптимальной стратегии управления ставками и работа над их оптимизацией, но и умение прогнозировать ход рекламных кампаний в сети интернет исходя из полученных результатов.',
+        badges: [
+            {
+                icon: 'bitrix-small',
+                desc: 'Сертифицированные специалисты',
+            },
+            {
+                icon: 'bitrix-small',
+                desc: 'Не берем процентов из рекламного бюджета',
+            },
+            {
+                icon: 'garant',
+                desc: 'Передовые технологии управления',
             },
         ]
 
