--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -65,7 +65,7 @@
         },
         {
             name: 'Маркетинг в соцсетях',
-            link: '#'
+            link: 'smm.html'
         },
         {
             name: 'Разработка и развитие сайтов',
@@ -214,6 +214,38 @@
         {
             title: 'Отчетность',
             text: `<p>Передача сайта заказчику (перенос на отдельный хостинг), обучение работе с системой управления сайта (CMS) и дальнейшая техническая поддержка.</p>`,
+        },
+    ]
+
+-
+    var tabsSmmStrategy = [
+        {
+            title: 'Оформление каналов',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolore doloremque itaque magni placeat, possimus ratione repudiandae sequi!</p>`,
+        },
+        {
+            title: 'Производство контента',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos dolore eius neque possimus quis, ullam ut voluptatem?</p>`,
+        },
+        {
+            title: 'Контакт c аудиторией',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Таргетированная реклама',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit perferendis repudiandae saepe.</p>`,
+        },
+        {
+            title: 'Аналитика и мониторинг',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque eveniet, ex iusto molestias saepe sed.</p>`,
+        },
+        {
+            title: 'Работа с репутацией',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero, tenetur!</p>`,
+        },
+        {
+            title: 'Промо-проекты',
+            text: `<p>Преимущество маркетинга в социальных сетях заключается в том, что люди добровольно делятся персональной информацией, указывают свои интересы и предпочтения, что даёт возможность выбирать аудиторию, используя фильтры. Мы считаем, что таким образом вы сумеете стать настолько близкими к своему пользователю, насколько это возможно.</p>`,
         },
     ]
 
@@ -394,6 +426,26 @@
         {
             title: 'Ведение кампании',
             text: `<p>Вникаем в Ваш маркетинг продаж, а именно выясняем, как Вы продаёте, есть ли у Вас акции, спецпредложения и т.д. Выявляем сильные и слабые стороны Вашего сайта. Анализируем сайт на предмет наличия и качества рекламного предложения. Это придаст индивидуальности и конкурентной устойчивости вашему продукту.</p>`,
+        },
+    ]
+
+-
+    var tabsSmm = [
+        {
+            title: 'Продвижение в Вконтакте',
+            text: `<p>Социальная сеть «ВКонтакте» успешно работает для продвижения самых разных сфер бизнеса. Мы понимаем это и предлагаем клиентам самые новые инструменты и методы раскрутки групп Вконтакте. Гарантируем рациональное использование бюджета и прозрачные отчеты по выполненным работам. </p>`,
+        },
+        {
+            title: 'Продвижение в Instagramm',
+            text: `<p>Проведем анализ вашей аудитории, поймем чего хочет ваш потребитель. Сегментируем аудитории на конкретных персонажей, пропишем сценарии для них, чтобы более точно коммуницировать с потребителями и как следствие более эффективно решать поставленные бизнес-задачи.</p>`,
+        },
+        {
+            title: 'Продвижение в Facebook',
+            text: `<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem consequuntur deserunt dolorum id modi quisquam similique!</p>`,
+        },
+        {
+            title: 'Таргетироанная реклама',
+            text: `<p>Технические новинки, предложения по улучшению юзабилити сайта, варианты решения бизнес-задач — это и многое другое наш подход к работе. Регулярные отчеты включают в себя понятные детальные описания о состоянии Вашего сервера и сайта</p>`,
         },
     ]
 
@@ -594,6 +646,30 @@
     ]
 
 -
+    var keyMetrix = [
+        {
+            name: 'Количество подписчиков',
+            text: 'Рост подписчиков на ваших каналах это естественный процесс при грамотном подходе к продвижению в социальных сетях. Для привлечения новых подписчиков мы разрабатываем различные конкурсы и промо-проекты.',
+        },
+        {
+            name: 'Взаимодействие с пользователем',
+            text: 'Контент — король. Визуальный слой — декорация сильного смысла, который продуман и выявлен с помощью маркетинговой аналитики.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 3',
+            text: 'Искренне признательны за добросовестное отношение, подбор и внедрение оптимальных решений по визуализации составляющей и процессу поискового продвижения сайта.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 4',
+            text: 'ООО Дятьковская Стекольная Артель (изготовление и продажа изделий из хрусталя и стекла) выражает свою благодарность ООО «ITC-MEDIA» Которая показала высокий уровень мастерства в разработке, создании и продвижении сайта.',
+        },
+        {
+            name: 'Взаимодействие с пользователем 5',
+            text: 'Руководство и коллектив ООО «Клиника «Прайм Медикал» благодарит компанию ITC Media за плодотворное сотрудничество в сфере продвижения и оптимизации сайта нашей компании.',
+        },
+    ]
+
+-
     var promBadges = {
         text: 'Как показывает практика, разработка сайта без участия интернет-маркетолога, приводит к плачевным результатам: сайты остаются незаметными для пользователей. Привлечь так необходимый трафик может лишь основательная маркетинговая подготовка.',
         badges: [
@@ -668,6 +744,26 @@
             {
                 icon: 'garant',
                 desc: 'Передовые технологии управления',
+            },
+        ]
+
+    }
+
+-
+    var smmBadges = {
+        text: 'Продвижение в социальных сетях является новой «фишкой» в сфере интернет-маркетинга, которая позволит вам эффективно взаимодействовать с целевой аудиторией, заинтересованной в определённых товарах или услугах. Вы сможете выстраивать прямое общение с вашими клиентами, завоёвывать их лояльность и даже проводить точечную рекламу, основанную на информации с личных страниц пользователей.',
+        badges: [
+            {
+                icon: 'bitrix-small',
+                desc: 'Сертифицированные специалисты',
+            },
+            {
+                icon: 'bitrix-small',
+                desc: 'Авторская стратегия SMM-продвижения',
+            },
+            {
+                icon: 'garant',
+                desc: 'Используем только белые методы',
             },
         ]
 
