Add company pages (nope)

--- a/dev/pug/utils/data.pug
+++ b/dev/pug/utils/data.pug
@@ -38,7 +38,7 @@
         },
         {
             name: 'Компания',
-            link: '#'
+            link: 'company.html'
         },
         {
             name: 'Блог',
