--- a/dev/static/styles/modules/buttons/buttons.sass
+++ b/dev/static/styles/modules/buttons/buttons.sass
@@ -100,5 +100,9 @@
                 width: 42px
                 height: 48px
                 margin-left: 20px
+            +xs-block()
+                width: 20px
+                height: 22px
+                margin-left: 8px
 
 
